Added using child id get to child post
